--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
     cached_network_image: ^3.1.0
     just_audio: ^0.9.7
     rxdart: ^0.27.1
+    just_audio_background: ^0.0.1-beta.1
 
 dev_dependencies:
     flutter_test:
